# chau7

./: .editorconfig  .gitignore  .mcp.json  .swiftlint.yml  AGENTS.md  ARCHITECTURE.md  ASSESSMENT-v1.1-deployment.md  ASSESSMENT-v1.2-complete.md  ASSESSMENT-v1.3-complete.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURES.md  LICENSE  PLAN-TIER2-RUST-TERMINAL.md  PLAN-TIER3-METAL-PERFORMANCE.md  PRIVACY.md  Package.resolved  Package.swift  README.md  SECURITY.md  SPEC-Token-Reduction-Platform.md  SWIFTTERM_FORK.md  THIRD_PARTY_NOTICES.md  lefthook.yml  package.json
.chau7/: pre-commit-review.conf  snippets.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: post-commit  pre-commit  pre-push
Scripts/: README.md  check-anti-slop  check-docs-staged  check-release-tag-push  ci-lib.sh  ci-local  ci-local-fast  ci-local-relay-ts  claude-wrapper.sh  codex-wrapper.sh  extract-changelog  install-hooks  order66  ruff.toml  (+2 more)
apps/chau7-macos/rust/chau7_optim/: Cargo.toml  README.md  UPSTREAM-SYNC.md
apps/chau7-macos/rust/chau7_optim/src/: cargo_cmd.rs  config.rs  discover.rs  find_cmd.rs  format_cmd.rs  gain.rs  git.rs  go_cmd.rs  golangci_cmd.rs  grep_cmd.rs  lint_cmd.rs  main.rs  playwright_cmd.rs  pytest_cmd.rs  python_cmd.rs  read.rs  ruff_cmd.rs  swift_cmd.rs  tee.rs  tracking.rs  tsc_cmd.rs  utils.rs
apps/chau7-macos/rust/chau7_optim/src/parser/: README.md  formatter.rs  mod.rs  types.rs
apps/chau7-macos/rust/chau7_terminal/: Cargo.toml  FFI_DESIGN.md  README.md  build.rs  cbindgen.toml
apps/chau7-macos/rust/chau7_terminal/include/: chau7_terminal.h
apps/chau7-macos/rust/chau7_terminal/src/: color.rs  ffi.rs  graphics.rs  lib.rs  metrics.rs  pool.rs  pty.rs  reader_pool.rs  terminal.rs  types.rs
tools/pentagi-mcp/: README.md  pyproject.toml
tools/pentagi-mcp/pentagi_mcp/: executor.py  server.py  state.py  tools.py
tools/pentagi-mcp/tests/: test_executor_and_tools.py
(+1625 files in other folders)
