[project]
name = "pentagi-mcp"
version = "0.1.0"
description = "MCP server exposing pentest tooling — Claude Code / Codex CLI drives, PentAGI's sandbox container executes."
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "defusedxml>=0.7.1",
]

[project.scripts]
pentagi-mcp = "pentagi_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pentagi_mcp"]
